@@ -45,14 +45,14 @@ public class TopicServlet extends JAMWikiServlet {
 	 * @return A <code>ModelAndView</code> object to be handled by the rest of the Spring framework.
 	 */
 	protected ModelAndView handleJAMWikiRequest(HttpServletRequest request, HttpServletResponse response, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
-		view(request, next, pageInfo);
+		view(request, response, next, pageInfo);
 		return next;
 	}
 
 	/**
 	 *
 	 */
-	private void view(HttpServletRequest request, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
+	private void view(HttpServletRequest request, HttpServletResponse response, ModelAndView next, WikiPageInfo pageInfo) throws Exception {
 		String topicName = WikiUtil.getTopicFromURI(request);
 		if (StringUtils.isBlank(topicName)) {
 			String virtualWikiName = pageInfo.getVirtualWikiName();
@@ -65,7 +65,8 @@ public class TopicServlet extends JAMWikiServlet {
 		}
 		Topic topic = ServletUtil.initializeTopic(virtualWiki, topicName);
 		if (topic.getTopicId() <= 0) {
-			// topic does not exist, display empty page
+			// topic does not exist, return 404 and display empty page
+			response.setStatus(HttpServletResponse.SC_NOT_FOUND);
 			WikiMessage wikiMessage = new WikiMessage("topic.notcreated");
 			// topic name is escaped from WikiUtil.getTopicFromURI, so do not double-escape
 			wikiMessage.setParamsWithoutEscaping(new String[]{topicName});
